endpoint users and tipe pengaduan
